--- a/template/conf/openshift.conf
+++ b/template/conf/openshift.conf
@@ -1,3 +1,4 @@
+include "application.conf"
 # This is the main configuration file for the application.
 # ~~~~~
 
@@ -9,24 +10,14 @@ application.secret="X9rCFh0HjauFu>qB<Sbt20<xLv7StkAK6HAsdJfHGItwxSGJcHQVeY:eHa36
 
 # The application languages
 # ~~~~~
-application.langs="en"
+play.i18n.langs = ["en"]
 
-# Global object class
+# Ebean configuration
 # ~~~~~
-# Define the Global object class for this application.
-# Default to Global in the root package.
-# application.global=Global
-
-# Router
-# ~~~~~
-# Define the Router object to use for this application.
-# This router will be looked up first when the application is starting up,
-# so make sure this is the entry point.
-# Furthermore, it's assumed your route file is named properly.
-# So for an application router like `my.application.Router`,
-# you may need to define a router file `conf/my.application.routes`.
-# Default to Routes in the root package (and conf/routes)
-# application.router=my.application.Routes
+# You can declare as many Ebean servers as you want.
+# By convention, the default server is named `default`
+#
+ebean.default = ["models.*"]
 
 # Database configuration
 # ~~~~~
@@ -41,18 +32,10 @@ application.langs="en"
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+# play.evolutions.enabled=true
 
-# Logger
-# ~~~~~
-# You can also configure logback (http://logback.qos.ch/),
-# by providing an application-logger.xml file in the conf directory.
+# You can disable evolutions for a specific datasource if necessary
+play.evolutions.db.default.enabled = true
 
-# Root logger:
-logger.root=ERROR
-
-# Logger used by the framework:
-logger.play=INFO
-
-# Logger provided to your application:
-logger.application=DEBUG
+play.evolutions.autoApply = true
+play.evolutions.autoApplyDowns = false
