--- a/metadata/manifest.yml
+++ b/metadata/manifest.yml
@@ -1,14 +1,14 @@
 Name: play2
 Cartridge-Short-Name: Play2
-Display-Name: Play Framework 2.5.0
+Display-Name: Play Framework 2.5.3
 Description: "The High Velocity Web Framework For Java and Scala"
 Version: '2.5.0'
 License: "MIT"
 License-Url: http://www.gnu.org/copyleft/lesser.txt
 Vendor: none
-Cartridge-Version: '2.5.0'
+Cartridge-Version: '2.5.3'
 Cartridge-Vendor: github
-Website: https://github.com/tyrcho/openshift-cartridge-play2
+Website: https://github.com/almothafar/openshift-cartridge-play2
 Help-Topics:
   "Developer Center": https://www.openshift.com/developers
 Categories:
@@ -84,3 +84,4 @@ Endpoints:
       - Frontend:      "/health"
         Backend:       ""
         Options:       { health: true }
+Source-Url: https://github.com/almothafar/openshift-cartridge-play2/archive/master.zip
