--- a/bin/control
+++ b/bin/control
@@ -14,17 +14,20 @@ for file in "${OPENSHIFT_DEPLOYMENTS_DIR}/current/repo"/*".zip"; do
 done
 echo $latest_dist > ${PLAY2_RUNTIME}/play2-dist-file.file
 readonly PLAY2_DIST_FILE=${PLAY2_RUNTIME}/play2-dist-file.file
+
 if [ -f "$latest_dist" ]; then
 	sed 's@PLAY2_APPLICATION_PATH.*@export PLAY2_APPLICATION_PATH='$latest_dist'@' ~/.profile
 	. ~/.profile
 else
   echo "No Distribution file found [$latest_dist], .profile untouched"
 fi
+
 if [ -f "${OPENSHIFT_DEPLOYMENTS_DIR}/current/repo/ssl_key" ]; then
 	. ${OPENSHIFT_DEPLOYMENTS_DIR}/current/repo/ssl_key
 else
-  
+  echo "Normal nono-ssl database connection will be opened"
 fi
+
 readonly PLAY2_DEPLOY_PATH=$OPENSHIFT_DATA_DIR/deploy
 # Begin Play2 status
 readonly PLAY2_STATUS_BUILDING=1
